fixed text contrast issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,15 +40,14 @@ h1 {
 }
 
 h2 { 
-    color: #fe921f; 
+    color: #055777; 
     text-align: left;
     font-family: 'Lato', sans-serif; 
     font-size: 2em; 
-    font-weight: 300; 
+    font-weight: 700; 
     line-height: 1em; 
     margin: 0.5em 0.5em 0;
-    padding: 0.8em 0 0.5em;
-    text-shadow: 0 2px 0 black; 
+    padding: 0.8em 0 0.5em; 
 }
 
 h3{
@@ -97,12 +96,16 @@ h3 {
 
 /**paragraphs styling**/
 p { 
-    color: #adb7bd;
+    color: #444;
     font-family: Arial, sans-serif;
     font-size: 1em;
     line-height: 2em;
     margin: 0em 1em 1.9em 1em;
     text-align: left;
+}
+
+.content{
+    color: #ccc;
 }
 
 /**links styling**/
@@ -169,7 +172,7 @@ a:hover {
 
 /**link to my github in built by**/
 .credits{
-    color:#777;
+    color:#999;
     text-decoration: none;
 }
 
